"Generate Activity Refactor"

--- a/QR Scanner/app/src/main/res/layout/activity_generate.xml
+++ b/QR Scanner/app/src/main/res/layout/activity_generate.xml
@@ -1,47 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
->
-
-
-
-    <RelativeLayout
-        android:id="@+id/top_relative"
-        android:background="@color/whiteLight"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-
-        <RelativeLayout
-            android:id="@+id/ads_relative"
-            android:layout_width="match_parent"
-            android:layout_height="50dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="@string/adsTxt"
-                android:fontFamily="@font/roboto_regular"
-                android:textColor="@color/tt_black"
-                android:textSize="18sp" />
-
-        </RelativeLayout>
-
-
-
-        <FrameLayout
-            android:id="@+id/banner_adsview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true" />
-
-    </RelativeLayout>
-
-
-
+    android:background="@color/white">
 
 
     <include
@@ -51,4 +12,4 @@
         android:layout_below="@+id/top_relative" />
 
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
