--- a/QR Scanner/app/src/main/res/layout/dashboard_activity.xml
+++ b/QR Scanner/app/src/main/res/layout/dashboard_activity.xml
@@ -5,18 +5,18 @@
     android:layout_height="match_parent"
     android:background="@color/white">
 
-    <fragment
-        android:layout_width="0dp"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/nav_host_fragmnet"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:id="@+id/qr_nav_host_fragment"
-        android:name="androidx.navigation.fragment.NavHostFragment"
-        app:navGraph="@navigation/qr_dashboard_navigation"
         app:defaultNavHost="true"
-        app:layout_constraintBottom_toTopOf="@+id/navigation_menu"
+        app:navGraph="@navigation/qr_dashboard_navigation"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        app:layout_constraintBottom_toTopOf="@id/navigation_menu"/>
+
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/navigation_menu"
