--- a/QR Scanner/app/src/main/res/layout/generate_recycler.xml
+++ b/QR Scanner/app/src/main/res/layout/generate_recycler.xml
@@ -4,47 +4,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
+    android:layout_margin="5dp"
     app:cardBackgroundColor="@color/white"
-    app:cardCornerRadius="12dp"
-    app:cardElevation="10dp">
+    app:cardCornerRadius="6dp">
 
-
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/anotherRecycler"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="85dp"
         android:background="@color/whiteLight"
         android:clickable="true"
         android:focusable="true"
         android:foreground="?android:attr/selectableItemBackground"
-        android:paddingTop="20dp"
-        android:paddingBottom="20dp">
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="7dp">
 
         <ImageView
             android:id="@+id/generate_txt_img"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_centerHorizontal="true"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:layout_gravity="center"
             android:src="@drawable/text_scanner"
             tools:ignore="ContentDescription" />
 
         <TextView
             android:id="@+id/generate_text"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/generate_txt_img"
-            android:layout_centerHorizontal="true"
+            android:layout_marginTop="5dp"
             android:fontFamily="@font/roboto_regular"
-            android:paddingTop="10dp"
+            android:gravity="center"
             android:text="@string/QRTEXT"
             android:textColor="@color/tt_black"
-            android:textSize="14sp" />
+            android:textSize="12sp" />
 
-    </RelativeLayout>
-
-
-
+    </LinearLayout>
 
 </androidx.cardview.widget.CardView>
 
